# autonomous_mobile_robot

./: README.md  frames_2024-09-15_21.46.26.gv  low_encoder_error_2.pgm  low_encoder_error_2.yaml  map_1725340150.pgm  map_1725340150.yaml  map_1725501477.pgm  map_1725501477.yaml  map_1725581291.pgm  map_1725581291.yaml  map_1725687326.pgm  map_1725687326.yaml  map_1725688361.yaml  map_1725697835.pgm  map_1725697835.yaml  map_1725755390.pgm  map_1725755390.yaml  map_1725755974.pgm  map_1725755974.yaml  map_1725758187.pgm  map_1725758187.yaml  map_1725758932.pgm  map_1725758932.yaml  map_1725759055.pgm  map_1725759055.yaml  map_1725759157.pgm  map_1725759157.yaml  my_map.pgm  my_map.yaml  small_house_GraphSLAM.pgm  small_house_GraphSLAM.yaml
install/: local_setup.sh  setup.sh
log/: latest_build  latest_list
src/bumperbot_bringup/launch/: simulated_robot.launch.py
src/bumperbot_controller/bumperbot_controller/: noisy_controller.py
src/bumperbot_controller/config/: bumperbot_controllers.yaml
src/bumperbot_controller/launch/: controller.launch.py  joystick_teleop.launch.py
src/bumperbot_description/: CMakeLists.txt
src/bumperbot_description/launch/: gazebo.launch.py
src/bumperbot_description/urdf/: bumperbot_gazebo.xacro
src/bumperbot_description/worlds/: warehouse.world
src/bumperbot_localization/: CMakeLists.txt  package.xml
src/bumperbot_localization/config/: dwb_controller.yaml  local_costmap.yaml
src/bumperbot_localization/launch/: global_localization.launch.py
src/bumperbot_utils/: CMakeLists.txt  package.xml
(+86 files in other folders)
