<?xml version="1.0"?>
<package format="3">
  <name>bumperbot_localization</name>
  <version>0.0.0</version>
  <description>ROS 2 Code Examples</description>
  <maintainer email="shadysoliman19@gmail.com">Shady Soliman</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>nav2_behaviors</depend>
  <depend>nav2_core</depend>


  <exec_depend>nav2_bringup</exec_depend>

  <exec_depend>robot_localization</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_planner</exec_depend>          <!-- Added -->
  <exec_depend>nav2_controller</exec_depend>       <!-- Added -->
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>nav2_bt_navigator</exec_depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
